export enum ContactType {
    EMAIL,
    SMS,
}
